Fix layout issues caused by scroll bars.

--- a/app/assets/stylesheets/design/navigation/_issues.scss
+++ b/app/assets/stylesheets/design/navigation/_issues.scss
@@ -61,7 +61,7 @@
   .calendar_holder {
     width: 405px;
 
-    .calendars-wrapper { overflow: auto; }
+    .calendars-wrapper { overflow: hidden; }
 
     .calendar-wrapper {
       float: left;
